--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ AUTH0_ID=
 AUTH0_SECRET=
 AUTH0_ISSUER=
 
-FACEBOOK_ID=@hectorplinio
-FACEBOOK_SECRET=9470e46aec9f25179793a93a3f9171ee
+FACEBOOK_ID=1598329507189637
+FACEBOOK_SECRET=9c734cf6ad0291803500ec40f71e1985
 
 GITHUB_ID=55b6e6c0009b0ebce50d
 GITHUB_SECRET=6d05e0dd04e6a60b492a351eb1e08de4672118ba
@@ -25,4 +25,4 @@ TWITTER_SECRET=
 EMAIL_SERVER=smtp://username:password@smtp.example.com:587
 EMAIL_FROM=NextAuth <noreply@example.com>
 
-DATABASE_URL=sqlite://localhost/:memory:?synchronize=true
+DATABASE_URL=mongodb+srv://auth:1234@cluster0.nrwz7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
