--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.7.0",
     "next": "12.0.7",
     "next-auth": "^4.0.5",
     "react": "17.0.2",
@@ -18,6 +19,7 @@
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
+    "prisma": "^3.7.0",
     "tailwindcss": "^3.0.5"
   }
 }
