--- a/.env
+++ b/.env
@@ -1,15 +1,6 @@
 NEXTAUTH_URL=http://localhost:3000
 SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
 
-APPLE_ID=
-APPLE_TEAM_ID=
-APPLE_PRIVATE_KEY=
-APPLE_KEY_ID=
-
-AUTH0_ID=
-AUTH0_SECRET=
-AUTH0_ISSUER=
-
 FACEBOOK_ID=1598329507189637
 FACEBOOK_SECRET=9c734cf6ad0291803500ec40f71e1985
 
@@ -19,10 +10,7 @@ GITHUB_SECRET=6d05e0dd04e6a60b492a351eb1e08de4672118ba
 GOOGLE_ID=282461885895-uf5gfgjg14lf7mb0843hj2s628m8n2e3.apps.googleusercontent.com
 GOOGLE_SECRET=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
 
-TWITTER_ID=
-TWITTER_SECRET=
-
 EMAIL_SERVER=smtp://username:password@smtp.example.com:587
 EMAIL_FROM=NextAuth <noreply@example.com>
 
-DATABASE_URL=mongodb+srv://auth:1234@cluster0.nrwz7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://auth:1234@cluster0.nrwz7.mongodb.net/NextAuth?retryWrites=true&w=majority
