--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/firebase-adapter": "^0.1.2-pr.183-76202b42.8",
+    "@next-auth/mongodb-adapter": "^1.0.1",
+    "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.7.0",
+    "bson": "^4.6.1",
+    "mongodb": "^4.3.0",
     "next": "12.0.7",
-    "next-auth": "^4.0.5",
+    "next-auth": "^4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -20,6 +25,6 @@
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
     "prisma": "^3.7.0",
-    "tailwindcss": "^3.0.5"
+    "tailwindcss": "^3.0.12"
   }
 }
